# qec-sim

./: .clangd  .gitignore  CLAUDE.md  README.md  algo.md  compile_commands.json  main.py  pyproject.toml
.claude/: settings.json
include/: circuit.hpp  gate.hpp  state.hpp
include/stabsim/: stab_cpu.hpp
include/stabsim/src/: qasm_extraction.hpp  stim_extraction.hpp
python/: CMakeLists.txt  pyproject.toml
python/build-py312/: Makefile  cmake_install.cmake
python/build-py313/: Makefile  cmake_install.cmake
python/examples/: stabilizer_using_stim.py
python/scratch/: noise_m.py  visualize_circuit.py
python/src/: nwqsim_py.cpp
stim-playground/: PT_exp.py  createStimCircs.py  gen_stim_file.py  getting_started.ipynb  noisy_circuit.stim  pauli_t.py  pyproject.toml  sinter_exp.py  test.ipynb
stim-playground/QC_claude/: __init__.py  circuit.py  decompositions.py  detector.py  estimator.py  example.py  observable.py  plan.txt  sampler.py
stim-playground/QC_claude/_cpp/: CMakeLists.txt  build.sh  circuit_module.cpp
stim-playground/QC_claude/exp/: baseline_reproduce.py  exact_damp_sc.py  rep.py
stim-playground/QC_claude/tests/: conftest.py  test_detector.py  test_qc_claude.py
stim-playground/pt_qc/: baseline_pt.py  pauli_t.py  sinter_exp.py  stim_utils.py
stsim/: README.md  pyproject.toml
stsim/include/: backendManager.hpp  circuit.hpp  config.hpp
stsim/include/circuit_pass/: fusion.hpp
stsim/include/private/: cuda_util.cuh
stsim/include/stabsim/: stab_cpu.hpp  stab_cuda.cuh
stsim/include/stabsim/src/: stim_extraction.hpp
stsim/python/: CMakeLists.txt  nwqsim.pyi
stsim/python/examples/: basic_stabilizer_usage.py  input.stim  stabilizer_using_stim.py  stsim_pybind11_quickstart.py
stsim/python/src/: nwqsim_py.cpp
stsim/qasm/: Makefile
