[project]
name = "ther"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltakit>=0.7.1",
    "jupyter>=1.1.1",
    "numpy==2.2.2",
    "qldpc>=0.2.6",
    "scienceplots>=2.2.0",
    "stim>=1.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
    "ty>=0.0.17",
]
